alteracao link das imagens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--cabeçalho-->
         <header>
             <div class="center">
-                <img src="/20220430_165516_mfnr.jpg" alt="foto de Eliane e família">
+                <img src="20220430_165516_mfnr.jpg" alt="foto de Eliane e família">
                     </div>
                     <h1>O QUE ME INSPIRA</h1>
                     <h2> Sobre o assunto</h2>
@@ -50,10 +50,10 @@
     <!-- Rodapé -->
      <footer>
       <a href="https://github.com/elianeferreira" target="_blank">
-        <img src="/github_logo.png" alt="ícone do GitHub">
+        <img src="github_logo.png" alt="ícone do GitHub">
       </a>
       <a href="https://instagram.com/" target="_blank">
-        <img src="/logo-instagram-png-fundo-transparente3.webp" alt="Logo do Instagram">
+        <img src="logo-instagram-png-fundo-transparente3.webp" alt="Logo do Instagram">
       </a>
      
     </footer>
